[package]
name = "iced-ios-example"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = '2018'

[lib]
name = "iced_ios_example"
crate-type = ["staticlib"]

[dependencies]
# For local development.
# iced = { path = "../iced/" }
iced = { git = "https://github.com/simlay/iced", branch = "ios-support-wip" }
color-backtrace = "0.2.3"
env_logger = "0.7"
